# ebook_realworld_py_projects

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ebook_realworld_projects_notes.docx
helpers/: logging_wfs.py  output_edit.py
